Basic starter code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello world
+<html>
+    <head>
+        <title> Sreejith Unnikrishnan </title>
+    </head>
+
+    <body>
+        Under construction right now, will be updated very soon !
+    </body>
+</html>
