--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!doctype html>
+
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title> Sreejith Unnikrishnan </title>
     </head>
 
