Adding bootstrap and few more html/css files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,59 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title> Sreejith Unnikrishnan </title>
+
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
-        Under construction right now, will be updated very soon !
+
+    	<nav class="navbar navbar-default">
+    		<div class="container-fluid">
+    			<ul class="nav navbar-nav">
+    				<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+    				<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="projects/intellihome.html">Intelli-Home</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="projects/irobotsn.html">Irobot security SN</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="projects/3dtrilateration.html">3D Trilateration</a></li>
+						</ul>
+    				</li>
+    			</ul>
+    		</div>
+    	</nav>
+
+    	<div class="row">
+    		<div class="col-md-6 photo">
+    			img
+    		</div>
+
+    		<div class="col-md-6">
+    			<div class="row name">
+    				<div class="col-md-6">
+    					<h3>Sreejith Unnikrishnan</h3>
+    				</div>
+    			</div>
+    			<div class="row quote">
+    				<blockquote> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget</p></blockquote>
+    			</div>
+    		</div>
+
+    	</div>
+
+    	<div class="row frontpagedata">
+    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget nunc at velit laoreet molestie. Morbi purus massa, dignissim eu tempus vel, pulvinar sit amet sem. Aliquam vehicula, lorem id molestie rhoncus, sem sem ultrices magna, sit amet auctor nunc nunc eu augue. Etiam tortor augue, dignissim nec iaculis aliquam, congue at orci. Morbi sed nisi accumsan, rhoncus odio iaculis, consequat tellus. Donec fermentum tortor magna, a tristique metus lobortis vitae. Cras sed nulla arcu. Phasellus ultricies auctor lectus. Integer quam eros, convallis vel luctus quis, dignissim nec nibh. In blandit, enim vestibulum sollicitudin accumsan, libero magna laoreet tortor, nec rhoncus est velit scelerisque velit. Donec ipsum ligula, faucibus at cursus a, placerat sit amet lectus. Nullam in mi nec eros pretium mollis. Phasellus ac ipsum mollis, tristique magna in, tincidunt mi.
+    	</div>
+
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </body>
 </html>
