updated contact details and quick info

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
     				</div>
     			</div>
     			<div class="row quote">
-    				<blockquote> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget</p></blockquote>
+    				<blockquote> 
+                        <p>
+                            Software Developer<br>
+                            Masters student - CSE <br>
+                            UC San Diego
+                        </p>
+                    </blockquote>
     			</div>
     		</div>
 
@@ -54,6 +60,14 @@
     		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget nunc at velit laoreet molestie. Morbi purus massa, dignissim eu tempus vel, pulvinar sit amet sem. Aliquam vehicula, lorem id molestie rhoncus, sem sem ultrices magna, sit amet auctor nunc nunc eu augue. Etiam tortor augue, dignissim nec iaculis aliquam, congue at orci. Morbi sed nisi accumsan, rhoncus odio iaculis, consequat tellus. Donec fermentum tortor magna, a tristique metus lobortis vitae. Cras sed nulla arcu. Phasellus ultricies auctor lectus. Integer quam eros, convallis vel luctus quis, dignissim nec nibh. In blandit, enim vestibulum sollicitudin accumsan, libero magna laoreet tortor, nec rhoncus est velit scelerisque velit. Donec ipsum ligula, faucibus at cursus a, placerat sit amet lectus. Nullam in mi nec eros pretium mollis. Phasellus ac ipsum mollis, tristique magna in, tincidunt mi.
     	</div>
 
+        <div class="row">
+            <div class="contact">
+                <div class="col-md-4">
+                    <h4>Contact</h4>
+                <emph> Email </emph> : srunnikr [at] ucsd [dot] edu
+                </div>
+            </div>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
