--- a/index.html
+++ b/index.html
@@ -1,75 +1,29 @@
-<!doctype html>
+<!doctype html> 
+<html>
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<head>
+		<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title> Sreejith Unnikrishnan </title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
 
-        <title> Sreejith Unnikrishnan </title>
+	<body>
 
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+		<div class="jumbotron">
+			<div class="heading">
+				<h1>Hi, I am Sreejith</h1>
+				<br>
+				<p class="introParagraph">Software Engineer</p>
+				<br>
+				<p class="introText">MS Computer Science, University of California San Diego</p>
+			</div>
+		</div>
 
-    <body>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js""></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	</body>
 
-    	<nav class="navbar navbar-default">
-    		<div class="container-fluid">
-    			<ul class="nav navbar-nav">
-    				<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-    				<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="projects/intellihome.html">Intelli-Home</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="projects/irobotsn.html">Irobot security SN</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="projects/3dtrilateration.html">3D Trilateration</a></li>
-						</ul>
-    				</li>
-    			</ul>
-    		</div>
-    	</nav>
-
-    	<div class="row">
-    		<div class="col-md-6 photo">
-    			img
-    		</div>
-
-    		<div class="col-md-6">
-    			<div class="row name">
-    				<div class="col-md-6">
-    					<h3>Sreejith Unnikrishnan</h3>
-    				</div>
-    			</div>
-    			<div class="row quote">
-    				<blockquote> 
-                        <p>
-                            Software Developer<br>
-                            Masters student - CSE <br>
-                            UC San Diego
-                        </p>
-                    </blockquote>
-    			</div>
-    		</div>
-
-    	</div>
-
-    	<div class="row frontpagedata">
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget nunc at velit laoreet molestie. Morbi purus massa, dignissim eu tempus vel, pulvinar sit amet sem. Aliquam vehicula, lorem id molestie rhoncus, sem sem ultrices magna, sit amet auctor nunc nunc eu augue. Etiam tortor augue, dignissim nec iaculis aliquam, congue at orci. Morbi sed nisi accumsan, rhoncus odio iaculis, consequat tellus. Donec fermentum tortor magna, a tristique metus lobortis vitae. Cras sed nulla arcu. Phasellus ultricies auctor lectus. Integer quam eros, convallis vel luctus quis, dignissim nec nibh. In blandit, enim vestibulum sollicitudin accumsan, libero magna laoreet tortor, nec rhoncus est velit scelerisque velit. Donec ipsum ligula, faucibus at cursus a, placerat sit amet lectus. Nullam in mi nec eros pretium mollis. Phasellus ac ipsum mollis, tristique magna in, tincidunt mi.
-    	</div>
-
-        <div class="row">
-            <div class="contact">
-                <div class="col-md-4">
-                    <h4>Contact</h4>
-                <emph> Email </emph> : srunnikr [at] ucsd [dot] edu
-                </div>
-            </div>
-        </div>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    </body>
 </html>
