--- a/index.html
+++ b/index.html
@@ -8,18 +8,58 @@
 		<title> Sreejith Unnikrishnan </title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Merriweather|Open+Sans" rel="stylesheet">
 	</head>
 
 	<body>
 
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+		  	<div class="container-fluid">
+		    	<div class="navbar-header">
+		      		<a class="navbar-brand" href="index.html">Sreejith Unnikrishnan</a>
+		    	</div>
+			    <ul class="nav navbar-nav">
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="/projects.html">Projects</a></li>
+					<li><a href="/contact.html">Contact</a></li> 
+			    </ul>
+		  	</div>
+		</nav>
+
 		<div class="jumbotron">
 			<div class="heading">
 				<h1>Hi, I am Sreejith</h1>
-				<br>
+				<hr class="hr">
 				<p class="introParagraph">Software Engineer</p>
 				<br>
-				<p class="introText">MS Computer Science, University of California San Diego</p>
+				<p class="introParagraph">MS Computer Science, University of California San Diego</p>
 			</div>
+		</div>
+
+		<div class="container-fluid intro-text">
+			I am a software engineer. I write code with an emphasis on building better computer systems for all.
+			I have a strong affinity for systems programming and embedded technology. <br>
+			Currently pursuing my Masters Degree in Computer Science from UC San Diego.
+		</div>
+
+		<div class="container-fluid section">
+			<h2> Skills </h2>
+			<hr>
+		</div>
+
+		<div class="container-fluid skills-images">
+			<ul>
+				<li><img class="skillimage" src="images/c-logo.png"></li>
+				<li><img class="skillimage" src="images/c++-logo.png"></li>
+				<li><img class="skillimagewide" src="images/python-logo.png"></li>
+				<li><img class="skillimage" src="images/java-logo.png"></li>
+				<li><img class="skillimage" src="images/html-logo.png"></li>
+				<li><img class="skillimage" src="images/git-logo.png"></li>
+			</ul>
+		</div>
+
+		<div class="container-fluid footer">
+			
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js""></script>
