Adding work exp

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<div class="container-fluid intro-text">
-			I am a software engineer. I write code with an emphasis on building better computer systems for all.
+			I am a software engineer. I write code with an emphasis on building better computer systems for all. <br>
 			I have a strong affinity for systems programming and embedded technology. <br>
 			Currently pursuing my Masters Degree in Computer Science from UC San Diego.
 		</div>
@@ -56,6 +56,60 @@
 				<li><img class="skillimage" src="images/html-logo.png"></li>
 				<li><img class="skillimage" src="images/git-logo.png"></li>
 			</ul>
+		</div>
+
+		<div class="container-fluid section">
+
+			<h2>Work Experience</h2>
+			<hr>
+
+			<div class="container-fluid workexp-item"> 
+				<img class="workexp-image" src="images/microsoft-logo.png"></li>
+			</div>
+			<div class="container-fluid workexp-desc"> 
+				<p class="workexp-text">
+					Software Development Intern - <em>Microsoft Xbox, Redmond, WA</em>
+				</p>
+				<br>
+				<ul>
+					<li>Wireless firmware development for Xbox console radio</li>
+					<li>Worked on project to reduce the wireless hardware cost by 50%</li>
+				</ul>
+			</div>
+
+			<div class="container-fluid workexp-item"> 
+				<img class="workexp-image" src="images/nokia-logo.jpg"></li>
+			</div>
+			<div class="container-fluid workexp-desc"> 
+				<p class="workexp-text">
+					Senior Engineer - <em>Nokia Networks, Bangalore, IN</em>
+				</p>
+				<br>
+				<ul>
+					<li>Developed Software suite from ground up for validating the functional and performance characteristics of Protocol Independent Multicast (PIM - SM) and IGMP</li>
+					<li>Verified and simulated multiple traffic stream performance for in house FPGA based data frame generator (for Y.1564 protocol)</li>
+					<li>Wrote software for testing Y.1564, IP Multicast feature on multi-chassis Alcatel SAS-R platform</li>
+					<li>High availability verification software for SAS-R platform</li>
+					<li>Developed API`s to simulate congested IP Multicast network over Alcatel 7210 series routers</li>
+					<li>Code for adding QoS, MAC/IP Filter over IP Multicast networks and verifying the traffic flow</li>
+					<li>Created a flexible software framework to append the feature set for ITU-T Y.1564 protocol for Alcatel- Lucent 7210 SAS-K platform </li>
+				</ul>
+			</div>
+
+			<div class="container-fluid workexp-item"> 
+				<img class="workexp-image" src="images/nokia-logo.jpg"></li>
+			</div>
+			<div class="container-fluid workexp-desc"> 
+				<p class="workexp-text">
+					Software Engineer - <em>Nokia Networks, Bangalore, IN</em>
+				</p>
+				<br>
+				<ul>
+					<li>Improved the running time of ITU-T Y.1564 Ethernet activation test suite by around 25%, for the Alcatel 7210 series routers</li>
+					<li>Wrote the Quality of Service (QoS) and IP/Mac filter verification code for Alcatel SAS-X, SAS-M and SAS-T platforms</li>
+				</ul>
+			</div>
+
 		</div>
 
 		<div class="container-fluid footer">
