--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		    	</div>
 			    <ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="/projects.html">Projects</a></li>
-					<li><a href="/contact.html">Contact</a></li> 
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="contact.html">Contact</a></li> 
 			    </ul>
 		  	</div>
 		</nav>
