Fixing github link

--- a/projects.html
+++ b/projects.html
@@ -126,14 +126,14 @@
                 <br><br>
 
                 <ul>
-                    <li> Overall system architecture</li>
-                    <li> Complete Embedded software design and development</li>
-                    <li> Node JS core server on robot : sensor communication and email API using Python</li>
+                    <li> Metadata Server API design and implementation </li>
+                    <li> Control protocol between storage severs and metadata servers </li>
+                    <li> Base code for a file system client </li>
                 </ul>
             </div>
 
             <div class="project-github">
-                <p>Check it out on github : <a href="https://github.com/srunnikr/Robocop_NodeJS_BBB_Irobot" target="_blank">
+                <p>Check it out on github : <a href="https://github.com/srunnikr/distributed_systems/tree/master/DFS/starter" target="_blank">
                     <img src="images/octocat.jpg"></a>
                 </p>
             </div>
