Adding ultrasound project

--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,43 @@
             </div>
         </div>
 
+        <div class="container-fluid section">
+            <div class="container-fluid project-heading">
+                <h2> 3D Trilateration and Modelling </h2>
+                <hr class="hr">
+            </div>
+            <div class="container-fluid project-subheading">
+                <h4> 3D object modelling using ultrasound trilateration </h4>
+            </div>
+
+            <div class="container-fluid project-text">
+                <p>Designed and developed a 3D trilateration system using ultround sensors and an ARM-Cortex-M4 based embedded processor.
+                    Utilized linear and angular information from HC-SR04 ultrasound sensors for accuracy .The algorithm was run on STM32F407VG platform from ST microelectronics.
+                    Also developed a custom communication protocol between embedded system and the python based visualization program.
+                    The system program is a PyQt based tool that captures, process and plot 3D coordinate data obtained from ARM processor over USB serial interface.
+                    The project was nominated for TCS best project award
+
+                </p>
+
+                My contributions include
+
+                <br><br>
+
+                <ul>
+                    <li> Firmware design and development for the ARM platform </li>
+                    <li> Firmware drivers for UART communication as well as sensor interfacing </li>
+                    <li> Python based command module for interfacing with the controller and a few modules for 3D plotting </li>
+                </ul>
+            </div>
+<!--
+            <div class="project-github">
+                <p>Check it out on github : <a href="https://github.com/srunnikr/distributed_systems/tree/master/DFS/starter" target="_blank">
+                    <img src="images/octocat.jpg"></a>
+                </p>
+            </div>
+-->
+        </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
