--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
 		      		<a class="navbar-brand" href="index.html">Sreejith Unnikrishnan</a>
 		    	</div>
 			    <ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="contact.html">Contact</a></li> 
+					<li class="active"><a href="contact.html">Contact</a></li>
 			    </ul>
 		  	</div>
 		</nav>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="container-fluid contact-section">
-        Email : srunnikr [at] ucsd [dot] edu
+        Email : srunnikr [at] ucsd (dot) edu
         </div>
 
 	</body>
