--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
 		      		<a class="navbar-brand" href="index.html">Sreejith Unnikrishnan</a>
 		    	</div>
 			    <ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="active"><a href="projects.html">Projects</a></li>
 					<li><a href="contact.html">Contact</a></li>
 			    </ul>
 		  	</div>
