--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,37 @@
             </div>
         </div>
 
+        <div class="container-fluid section">
+            <div class="container-fluid project-heading">
+                <h2> CPU two level cache simulation </h2>
+                <hr class="hr">
+            </div>
+            <div class="container-fluid project-subheading">
+                <h4> L1 and L2 software cache simulation with exclusivity property </h4>
+            </div>
+
+            <div class="container-fluid project-text">
+                <p>Wrote a software simulator for 2 level cache simulation with and without exclusivity property. The code takes in cache size, block size and other parameters as input, and runs
+                simulation across multiple benchmark traces. The code was tested for accuracy and speed.
+                </p>
+
+                My contributions include
+
+                <br><br>
+
+                <ul>
+                    <li> Design and development of the software framework </li>
+                    <li> Modules for processing benchmark tracefiles </li>
+                </ul>
+            </div>
+
+            <div class="project-github">
+                <p>Check it out on github : <a href="https://github.com/srunnikr/distributed_systems/tree/master/DFS/starter" target="_blank">
+                    <img src="images/octocat.jpg"></a>
+                </p>
+            </div>
+        </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
