Changes for cache project

--- a/projects.html
+++ b/projects.html
@@ -3,28 +3,28 @@
 
     <head>
         <meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title> Sreejith Unnikrishnan </title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Merriweather|Open+Sans" rel="stylesheet">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title> Sreejith Unnikrishnan </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Merriweather|Open+Sans" rel="stylesheet">
     </head>
 
     <body>
 
         <nav class="navbar navbar-inverse navbar-fixed-top">
-		  	<div class="container-fluid">
-		    	<div class="navbar-header">
-		      		<a class="navbar-brand" href="index.html">Sreejith Unnikrishnan</a>
-		    	</div>
-			    <ul class="nav navbar-nav">
-					<li><a href="index.html">Home</a></li>
-					<li class="active"><a href="projects.html">Projects</a></li>
-					<li><a href="contact.html">Contact</a></li>
-			    </ul>
-		  	</div>
-		</nav>
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Sreejith Unnikrishnan</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
 
         <div class="jumbotron">
             <div class="heading">
@@ -141,18 +141,6 @@
 
         <div class="container-fluid section">
             <div class="container-fluid project-heading">
-<<<<<<< HEAD
-                <h2> CPU two level cache simulation </h2>
-                <hr class="hr">
-            </div>
-            <div class="container-fluid project-subheading">
-                <h4> L1 and L2 software cache simulation with exclusivity property </h4>
-            </div>
-
-            <div class="container-fluid project-text">
-                <p>Wrote a software simulator for 2 level cache simulation with and without exclusivity property. The code takes in cache size, block size and other parameters as input, and runs
-                simulation across multiple benchmark traces. The code was tested for accuracy and speed.
-=======
                 <h2> 3D Trilateration and Modelling </h2>
                 <hr class="hr">
             </div>
@@ -167,7 +155,6 @@
                     The system program is a PyQt based tool that captures, process and plot 3D coordinate data obtained from ARM processor over USB serial interface.
                     The project was nominated for TCS best project award
 
->>>>>>> 327d62103fdef2bab5f082a272b186a3473aa7ef
                 </p>
 
                 My contributions include
@@ -175,33 +162,56 @@
                 <br><br>
 
                 <ul>
-<<<<<<< HEAD
-                    <li> Design and development of the software framework </li>
-                    <li> Modules for processing benchmark tracefiles </li>
-                </ul>
-            </div>
-
-=======
                     <li> Firmware design and development for the ARM platform </li>
                     <li> Firmware drivers for UART communication as well as sensor interfacing </li>
                     <li> Python based command module for interfacing with the controller and a few modules for 3D plotting </li>
                 </ul>
             </div>
 <!--
->>>>>>> 327d62103fdef2bab5f082a272b186a3473aa7ef
             <div class="project-github">
                 <p>Check it out on github : <a href="https://github.com/srunnikr/distributed_systems/tree/master/DFS/starter" target="_blank">
                     <img src="images/octocat.jpg"></a>
                 </p>
             </div>
-<<<<<<< HEAD
-=======
 -->
->>>>>>> 327d62103fdef2bab5f082a272b186a3473aa7ef
         </div>
 
+        <div class="container-fluid section">
+            <div class="container-fluid project-heading">
+                <h2> CPU two level cache simulation </h2>
+                <hr class="hr">
+            </div>
+            <div class="container-fluid project-subheading">
+                <h4> L1 and L2 software cache simulation with exclusivity property </h4>
+            </div>
+
+            <div class="container-fluid project-text">
+                <p>Wrote a software simulator for 2 level cache simulation with and without exclusivity property. The code takes in cache size, block size and other parameters as input, and runs
+                simulation across multiple benchmark traces. The code was tested for accuracy and speed.
+                </p>
+
+                My contributions include
+
+                <br><br>
+
+                <ul>
+                    <li> Design and development of the software framework </li>
+                    <li> Modules for processing benchmark tracefiles </li>
+                </ul>
+            </div>
+            <!--
+            <div class="project-github">
+                <p>Check it out on github : <a href="https://github.com/srunnikr/distributed_systems/tree/master/DFS/starter" target="_blank">
+                    <img src="images/octocat.jpg"></a>
+                </p>
+            </div>
+            -->
+        </div>
+
+        <div class="container-fluid footer">
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     </body>
 
