--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> 
+<!doctype html>
 <html>
 
 	<head>
@@ -21,7 +21,7 @@
 			    <ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="contact.html">Contact</a></li> 
+					<li><a href="contact.html">Contact</a></li>
 			    </ul>
 		  	</div>
 		</nav>
@@ -63,10 +63,10 @@
 			<h2>Work Experience</h2>
 			<hr>
 
-			<div class="container-fluid workexp-item"> 
+			<div class="container-fluid workexp-item">
 				<img class="workexp-image" src="images/microsoft-logo.png"></li>
 			</div>
-			<div class="container-fluid workexp-desc"> 
+			<div class="container-fluid workexp-desc">
 				<p class="workexp-text">
 					Software Development Intern - <em>Microsoft Xbox, Redmond, WA</em>
 				</p>
@@ -77,10 +77,10 @@
 				</ul>
 			</div>
 
-			<div class="container-fluid workexp-item"> 
+			<div class="container-fluid workexp-item">
 				<img class="workexp-image" src="images/nokia-logo.jpg"></li>
 			</div>
-			<div class="container-fluid workexp-desc"> 
+			<div class="container-fluid workexp-desc">
 				<p class="workexp-text">
 					Senior Engineer - <em>Nokia Networks, Bangalore, IN</em>
 				</p>
@@ -96,10 +96,10 @@
 				</ul>
 			</div>
 
-			<div class="container-fluid workexp-item"> 
+			<div class="container-fluid workexp-item">
 				<img class="workexp-image" src="images/nokia-logo.jpg"></li>
 			</div>
-			<div class="container-fluid workexp-desc"> 
+			<div class="container-fluid workexp-desc">
 				<p class="workexp-text">
 					Software Engineer - <em>Nokia Networks, Bangalore, IN</em>
 				</p>
@@ -113,11 +113,21 @@
 		</div>
 
 		<div class="container-fluid footer">
-			
+
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-86782922-1', 'auto');
+			ga('send', 'pageview');
+		</script>
+
 	</body>
 
 </html>
