Updating latest job desc

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="heading">
 				<h1>Hi, I am Sreejith</h1>
 				<hr class="hr">
-				<p class="introParagraph">Software Engineer</p>
+				<p class="introParagraph">Firmware Engineer, Fitbit</p>
 				<br>
 				<p class="introParagraph">MS Computer Science, University of California San Diego</p>
 			</div>
@@ -39,7 +39,8 @@
 		<div class="container-fluid intro-text">
 			I am a software engineer. I write code with an emphasis on building better computer systems for all. <br>
 			I have a strong affinity for systems programming and embedded technology. <br>
-			Currently pursuing my Masters Degree in Computer Science from UC San Diego.
+			Currently I am working as a firmware engineer at Fitbit. I work with BLE and communication stack on Fitbit devices. <br>
+			My present adventure revolves around architecting a new IP over BLE solution for future fitness trackers from Fitbit.
 		</div>
 
 		<div class="container-fluid section">
@@ -62,6 +63,21 @@
 
 			<h2>Work Experience</h2>
 			<hr>
+
+			<div class="container-fluid workexp-item">
+				<img class="workexp-image" src="images/fitbit-logo.png"></li>
+			</div>
+			<div class="container-fluid workexp-desc">
+				<p class="workexp-text">
+					Firmware Engineer - <em>Fitbit, San Fransisco, CA</em>
+				</p>
+				<br>
+				<ul>
+					<li>Part of the team architecting a new IP over BLE network stack for robust and high throuphput <br> communication for next generation fitness trackers</li>
+					<li>Worked on issues related to tracker based notifications from mobile devices over BLE</li>
+					<li>Worked on clock sequencer, BLE and Bootloader issues on Fitbit Higgs platform</li>
+				</ul>
+			</div>
 
 			<div class="container-fluid workexp-item">
 				<img class="workexp-image" src="images/microsoft-logo.png"></li>
