Updating contact info

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="container-fluid contact-section">
-        Email : srunnikr [at] ucsd (dot) edu
+        Email : sreejithu4u [at] gmail (dot) com
         </div>
 
 		<script>
